--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "ffprobe"
     ],
     "license": "MIT",
+    "homepage": "https://github.com/a-pp-zz/video-converter.git",
     "authors": [
         {
             "name": "CoolSwitcher",
@@ -17,9 +18,9 @@
     ],
     "require": {
         "php": ">=5.4",
-        "appzz/filesystem": "dev-master",
-        "appzz/arr": "dev-master",
-        "appzz/process": "dev-master"
+        "appzz/filesystem": "1.*",
+        "appzz/arr": "1.*",
+        "appzz/process": "1.*"
     },
     "autoload": {
         "psr-4": {"AppZz\\VideoConverter\\": "src/"}
