--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.4",
         "appzz/filesystem": "dev-master",
-        "appzz/arr": "dev-master",
+        "appzz/arr": "1.*",
         "appzz/process": "dev-master"
     },
     "autoload": {
