--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "php": ">=5.4",
         "appzz/filesystem": "dev-master",
         "appzz/arr": "1.*",
-        "appzz/process": "dev-master"
+        "appzz/process": "1.*"
     },
     "autoload": {
         "psr-4": {"AppZz\\VideoConverter\\": "src/"}
