--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
         "appzz/arr": "1.*",
         "appzz/process": "1.*",
         "appzz/arr": "1.*",
-        "appzz/process": "1.*",
-        "appzz/cli-progressbar": "1.*"
+        "appzz/process": "1.*"
     },
     "autoload": {
         "psr-4": {"AppZz\\VideoConverter\\": "src/"}
